--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <div>
-        <img src="./sources/svg/kario sin kairo.svg" alt="logo">
-    </div>
+    <img class="logoInicio" src="./sources/svg/kario sin kairo.svg" alt="logo">
 </body>
 </html>
