feat: :sparkles: developing the login style

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <img class="logoInicio" src="./sources/svg/kario sin kairo.svg" alt="logo">
+    <div class="login">
+        <img src="./sources/svg/kario.svg" alt="">
+        <h1 class="titulo">Bienvenido al panel digital de
+            <br>KARIO Media</h1>
+    </div>
 </body>
-</html>
+</html>justify-content: center;
