feat :tada: Add files and metadata for main page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -11,16 +11,16 @@
 
 <body>
     <img class="logoInicio" src="./sources/svg/kario sin kairo.svg" alt="logo">
-    <form class="signIn" action="main.html" method="post">
+    <form class="signIn" action="main.html" method="get">
         <img class="logoLogin" src="./sources/svg/kario.svg" alt="">
         <span class="titulo">Bienvenido al panel digital de
             <br>KARIO Media
         </span>
         <p>Por favor ingresar los siguientes datos para ingresar a la plataforma</p>
             <label for="usuario">Usuario</label>
-            <input type="text" id="usuario" name="user_name"/>
+            <input type="text" id="usuario"/>
             <label for="contraseña">Contraseña</label>
-            <input type="password" name="password">
+            <input type="password">
         <button type="submit">Ingresar al panel</button>
         <p class="piePag">Tienes problemas para ingresar? Por favor contactar con asistencia técnica lo más pronto posible</p>
     </form>
