--- a/main.html
+++ b/main.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kario Media</title>
+    <link rel="stylesheet" href="./style/styleMain.css">
+    <link rel="shortcut icon" href="./sources/svg/kario sin kairo.svg" type="image/x-icon">
 </head>
 <body>
-    <h1>HOla</h1>
+    <h1>Holiwis</h1>
 </body>
 </html>
