feat: :sparkles: add main page preloader

--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,18 @@
     <link rel="stylesheet" href="./style/styleMain.css">
     <link rel="shortcut icon" href="./sources/svg/kario sin kairo.svg" type="image/x-icon">
 </head>
+
 <body>
-    <h1>Holiwis</h1>
+    <div class="preloader">
+        <img class="logoInicio" src="./sources/svg/kario sin kairo.svg" alt="logo">
+        <div class="welcome">
+            <img class="logoLogin" src="./sources/svg/kario.svg" alt="">
+            <span class="titulo">Bienvenido de nuevo</span>
+            <img src="./sources/img/pp@2x.png" alt="">
+            <span class="titulo">Pedro Felipe Gómez Bonilla </span>
+            <p class="piePag">Usuario Administrador</p>
+        </div>
+    </div>
 </body>
+
 </html>
