feat :sparkles: Add main page and animation

--- a/main.html
+++ b/main.html
@@ -20,6 +20,10 @@
             <p class="piePag">Usuario Administrador</p>
         </div>
     </div>
+    <div class="main">
+        
+    </div>
+    
 </body>
 
 </html>
