feat :sparkles: developing page

--- a/main.html
+++ b/main.html
@@ -21,9 +21,41 @@
         </div>
     </div>
     <div class="main">
-        
+        <header>
+            <div class="headerCenter">
+                <div class="leftOpcs">
+                    <div class="opc opc1">
+                        <img src="./sources/svg/Group 3.svg" alt="icon">
+                        <p>Añadir</p>
+                    </div>
+                    <div class="opc opc2">
+                        <img src="./sources/svg/Icon open-reload.svg" alt="icon">
+                        <p>Refrescar</p>
+                    </div>
+                    <div class="opc opc3">
+                        <img src="./sources/svg/Icon material-delete-forever.svg" alt="icon">
+                        <p>Eliminar</p>
+                    </div>
+                </div>
+                <img src="./sources/svg/kario sin kairo.svg" alt="logo">
+                <div class="rightOpcs">
+                    <div class="opc opc4">
+                        <img src="./sources/svg/Icon material-bug-report.svg" alt="icon">
+                        <p>Reportar</p>
+                    </div>
+                    <div class="opc opc5">
+                        <img src="./sources/svg/Icon ionic-ios-help-circle.svg" alt="icon">
+                        <p>Ayuda</p>
+                    </div>
+                </div>
+            </div>
+            <div class="imgs">
+                <img class="setting" src="./sources/svg/Icon ionic-ios-settings.svg" alt="icon">
+                <img class="notifi" src="./sources/svg/Icon material-notifications-active.svg" alt="icon">
+                <img class="perfil" src="./sources/img/pp@2x.png" alt="icon">
+            </div>
+        </header>
     </div>
-    
 </body>
 
 </html>
