--- a/main.html
+++ b/main.html
@@ -30,11 +30,11 @@
                 <div class="rightOpcs">
                     <div class="opc opc4">
                         <img src="./sources/svg/Icon material-bug-report.svg" alt="icon">
-                        <a href="modal-report">Reportar</a>
+                        <a href="#modal_report">Reportar</a>
                     </div>
                     <div class="opc opc5">
                         <img src="./sources/svg/Icon ionic-ios-help-circle.svg" alt="icon">
-                        <a href="modal-help">Ayuda</a>
+                        <a href="#modal_help">Ayuda</a>
                     </div>
                 </div>
             </div>
@@ -57,11 +57,11 @@
     </div>
 </div>
 <!-- Módulo Modal AÑADIR -->
-<div class="modal-overlay" id="modal">
+<div class="modal_overlay" id="modal">
     <div class="modal">
         <div class="modal__header">
             <h3>Añadir</h3>
-            <a href="#" class="modal__close">&times;</a>
+            <a href="#" class="modal_close">&times;</a>
         </div>
             <label for="">Indicador</label>
             <input type="text"/>
@@ -85,11 +85,11 @@
 </div>
 
 <!-- Modal adicional para Reportar -->
-<div class="modal-overlay" id="modal-report">
+<div class="modal_overlay" id="modal_report">
     <div class="modal">
         <div class="modal__header">
-            <a href="#" class="modal__close">&times;</a>
             <h3>Reportar</h3>
+            <a href="#" class="modal_close">&times;</a>
         </div>
         <div class="modal_content">
             <h1 id="centro">Descripcion de Reporte:</h1>
@@ -108,13 +108,13 @@
 </div>
 
 <!-- Modal adicional para Ayuda -->
-<div class="modal-overlay" id="modal-help">
+<div class="modal_overlay" id="modal_help">
     <div class="modal">
         <div class="modal__header">
             <h3>Ayuda</h3>
-            <a href="#" class="modal__close">&times;</a>
+            <a href="#" class="modal_close">&times;</a>
         </div>
-        <div class="modal__content">
+        <div class="modal_content">
             <h1 id="centro">Contactar con un asesor:</h1>
             <label for="">Nombre completo:</label>
             <input type="text"/>
