feat :sparkles: 'help' container header

--- a/main.html
+++ b/main.html
@@ -160,6 +160,7 @@
     <div class="modal_general" id="modal">
         <div class="modal">
             <div class="modal_header">
+                <img src="./sources/svg/Group 3.svg" alt="icon">
                 <h3>Añadir</h3>
                 <a href="#" class="cerrar_modal">&times;</a>
             </div >
@@ -183,6 +184,8 @@
             </div>
         </div>
     </div>
+    <!-- Módulo Modal REPORTAR -->
+    
 
     
 </body>
