--- a/main.html
+++ b/main.html
@@ -18,16 +18,19 @@
                         <img src="./sources/svg/Group 3.svg" alt="icon">
                         <p>Añadir</p>
                     </div>
-                </a>  git config --global user.email "you@example.com"
-
+                </a>
+                <a href="#">
                 <div class="opc opc2">
                     <img src="./sources/svg/Icon open-reload.svg" alt="icon">
                     <p>Refrescar</p>
                 </div>
+                </a>
+                <a href="#">
                 <div class="opc opc3">
                     <img src="./sources/svg/Icon material-delete-forever.svg" alt="icon">
                     <p>Eliminar</p>
                 </div>
+                </a>
             </div>
             <a href="#"><img src="./sources/svg/kario sin kairo.svg" alt="logo"></a>
             <div class="rightOpcs">
@@ -46,104 +49,119 @@
             </div>
         </div>
         <div class="imgs">
-            <img class="setting" src="./sources/svg/Icon ionic-ios-settings.svg" alt="icon">
-            <img class="notifi" src="./sources/svg/Icon material-notifications-active.svg" alt="icon">
-            <img class="perfil" src="./sources/img/pp@2x.png" alt="icon">
+            <a href="#"><img class="setting" src="./sources/svg/Icon ionic-ios-settings.svg" alt="icon"></a>
+            <a href="#"><img class="notifi" src="./sources/svg/Icon material-notifications-active.svg" alt="icon"></a>
+            <a href="#"><img class="perfil" src="./sources/img/pp@2x.png" alt="icon"></a>
         </div>
     </header>
     <main>
         <span class="titleMain">Panel de Indicadores</span>
         <p>Aquí puedes visualizar los indicadores propuestos y añadidos por tu equipo de trabajo.</p>
-        <table class="indicadores">
-            <thead>
-                <tr>
-                    <th>Indicador</th>
-                    <th>Descripción</th>
-                    <th>Categoría</th>
-                    <th>Fecha de Inicio</th>
-                    <th>Fecha de Terminación</th>
-                    <th>Fórmula</th>
-                    <th>Frecuencia</th>
-                    <th>Cumplimiento</th>
-                    <th>Área</th>
-                    <th><img src="./sources/svg/Repeat Grid 2.svg" alt=""></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Modelado 3D</td>
-                    <td>Interés por dise......</td>
-                    <td>Baja</td>
-                    <td>12/05/21</td>
-                    <td>12/12/21</td>
-                    <td>Met.Ágil</td>
-                    <td>1/4</td>
-                    <td>31%</td>
-                    <td>Marketing</td>
-                    <td><img src="./sources/svg/Repeat Grid 2.svg" alt=""></td>
-                </tr>
-                <tr>
-                    <td>Finca Galedón</td>
-                    <td>Diseño de maque ......</td>
-                    <td>Baja</td>
-                    <td>12/04/21</td>
-                    <td>12/05/21</td>
-                    <td>Met.Ágil</td>
-                    <td>1/4</td>
-                    <td>31%</td>
-                    <td>Diseño</td>
-                    <td><img src="./sources/svg/Repeat Grid 2.svg" alt=""></td>
-                </tr>
-                <tr>
-                    <td>Colegios Privados</td>
-                    <td>Se busca llegar a los...</td>
-                    <td>Media</td>
-                    <td>24/04/21</td>
-                    <td>12/11/21</td>
-                    <td>Met.Fibo</td>
-                    <td>1/4</td>
-                    <td>31%</td>
-                    <td>Developers</td>
-                    <td><img src="./sources/svg/Repeat Grid 2.svg" alt=""></td>
-                </tr>
-                <tr>
-                    <td>Electrodomésticos</td>
-                    <td>Ventas de electro......</td>
-                    <td>Media</td>
-                    <td>12/04/21</td>
-                    <td>12/09/21</td>
-                    <td>N/A</td>
-                    <td>1/3</td>
-                    <td>31%</td>
-                    <td>Gerencia</td>
-                    <td><img src="./sources/svg/Repeat Grid 2.svg" alt=""></td>
-                </tr>
-                <tr>
-                    <td>Estrato 2 - Floridablanca</td>
-                    <td>Impacto en los sec......</td>
-                    <td>Alta</td>
-                    <td>12/04/21</td>
-                    <td>12/06/21</td>
-                    <td>Met.Expo</td>
-                    <td>1/4</td>
-                    <td>31%</td>
-                    <td>Marketing</td>
-                    <td><img src="./sources/svg/Repeat Grid 2.svg" alt=""></td>
-                </tr>
-                <tr>
-                    <td>Jóvenes en Acción</td>
-                    <td>Impacto en los sec......</td>
-                    <td>Alta</td>
-                    <td>15/02/21</td>
-                    <td>09/11/21</td>
-                    <td>Met.Expo</td>
-                    <td>1/2</td>
-                    <td>31%</td>
-                    <td>Producción</td>
-                    <td><img src="./sources/svg/Repeat Grid 2.svg" alt=""></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="indicadores">
+            <div class="thead">
+                <div class="contain-th">
+                    <div class="th">
+                        <p>Indicador</p>
+                        <p>Descripción</p>
+                        <p>Categoría</p>
+                        <p>Fecha de Inicio</p>
+                        <p>Fecha de Terminación</p>
+                        <p>Fórmula</p>
+                        <p>Frecuencia</p>
+                        <p>Cumplimiento</p>
+                        <p>Área</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+            </div>
+            <div class="tbody">
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p>Modelado 3D</p>
+                        <p>Interés por dise......</p>
+                        <p>Baja</p>
+                        <p>12/05/21</p>
+                        <p>12/12/21</p>
+                        <p>Met.Ágil</p>
+                        <p>1/4</p>
+                        <p>31%</p>
+                        <p>Marketing</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p>Finca Galedón</p>
+                        <p>Diseño de maque ......</p>
+                        <p>Baja</p>
+                        <p>12/04/21</p>
+                        <p>12/05/21</p>
+                        <p>Met.Ágil</p>
+                        <p>1/4</p>
+                        <p>25%</p>
+                        <p>Diseño</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p>Colegios Privados</p>
+                        <p>Se busca llegar a los...</p>
+                        <p>Media</p>
+                        <p>24/04/21</p>
+                        <p>12/11/21</p>
+                        <p>Met.Fibo</p>
+                        <p>1/4</p>
+                        <p>80%</p>
+                        <p>Developers</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p>Electrodomésticos</p>
+                        <p>Ventas de electro......</p>
+                        <p>Media</p>
+                        <p>12/04/21</p>
+                        <p>12/09/21</p>
+                        <p>N/A</p>
+                        <p>1/3</p>
+                        <p>32%</p>
+                        <p>Gerencia</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p>Estrato 2 - Floridablanca</p>
+                        <p>Impacto en los sec......</p>
+                        <p>Alta</p>
+                        <p>12/04/21</p>
+                        <p>12/06/21</p>
+                        <p>Met.Expo</p>
+                        <p>1/4</p>
+                        <p>95%</p>
+                        <p>Marketing</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p>Jóvenes en Acción</p>
+                        <p>Impacto en los sec......</p>
+                        <p>Alta</p>
+                        <p>15/02/21</p>
+                        <p>09/11/21</p>
+                        <p>Met.Expo</p>
+                        <p>1/2</p>
+                        <p>75%</p>
+                        <p>Producción</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <a href="#modal"><button class="buttonMain"><p>Añadir Elementos</p></button></a>
     </main>
 
     <div class="preloader">
@@ -183,7 +201,7 @@
         </div>
     </div>
     </div>
-    
+
 </body>
 
 </html>
