feat :sparkles: Format document

--- a/main.html
+++ b/main.html
@@ -20,16 +20,16 @@
                     </div>
                 </a>
                 <a href="#">
-                <div class="opc opc2">
-                    <img src="./sources/svg/Icon open-reload.svg" alt="icon">
-                    <p>Refrescar</p>
-                </div>
+                    <div class="opc opc2">
+                        <img src="./sources/svg/Icon open-reload.svg" alt="icon">
+                        <p>Refrescar</p>
+                    </div>
                 </a>
                 <a href="#">
-                <div class="opc opc3">
-                    <img src="./sources/svg/Icon material-delete-forever.svg" alt="icon">
-                    <p>Eliminar</p>
-                </div>
+                    <div class="opc opc3">
+                        <img src="./sources/svg/Icon material-delete-forever.svg" alt="icon">
+                        <p>Eliminar</p>
+                    </div>
                 </a>
             </div>
             <a href="#"><img src="./sources/svg/kario sin kairo.svg" alt="logo"></a>
@@ -161,7 +161,9 @@
                 </div>
             </div>
         </div>
-        <a href="#modal"><button class="buttonMain"><p>Añadir Elementos</p></button></a>
+        <a href="#modal"><button class="buttonMain">
+                <p>Añadir Elementos</p>
+            </button></a>
     </main>
 
     <div class="preloader">
@@ -181,7 +183,7 @@
                 <img src="./sources/svg/Group 3.svg" alt="icon">
                 <h3>Añadir</h3>
                 <a href="#" class="cerrar_modal">&times;</a>
-            </div >
+            </div>
             <label for="">Indicador</label>
             <input type="text" />
             <label for="">Descripción</label>
@@ -199,13 +201,13 @@
             <label for="">Cumplimiento</label>
             <input type="text">
             <a class="btn" href="#">Añadir Elemento </a>
-            </div>
         </div>
     </div>
+    </div>
     <!-- Módulo Modal REPORTAR -->
-    
 
-    
+
+
 </body>
 
 </html>
