--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
                         <p>Añadir</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./main.html">
                     <div class="opc opc2">
                         <img src="./sources/svg/Icon open-reload.svg" alt="icon">
                         <p>Refrescar</p>
@@ -156,6 +156,90 @@
                         <p>1/2</p>
                         <p>75%</p>
                         <p>Producción</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="indicadoresPhone">
+            <div class="tbody">
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p class="th">Indicador</p><p>Modelado 3D</p>
+                        <p class="th">Descripción</p><p>Interés por dise......</p>
+                        <p class="th">Categoría</p><p>Baja</p>
+                        <p class="th">Fecha de Inicio</p><p>12/05/21</p>
+                        <p class="th">Fecha de Terminación</p><p>12/12/21</p>
+                        <p class="th">Fórmula</p><p>Met.Ágil</p>
+                        <p class="th">Frecuencia</p><p>1/4</p>
+                        <p class="th">Cumplimiento</p><p>31%</p>
+                        <p class="th">Área</p><p>Marketing</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p class="th">Indicador</p><p>Finca Galedón</p>
+                        <p class="th">Descripción</p><p>Diseño de maque ......</p>
+                        <p class="th">Categoría</p><p>Baja</p>
+                        <p class="th">Fecha de Inicio</p><p>12/04/21</p>
+                        <p class="th">Fecha de Terminación</p><p>12/05/21</p>
+                        <p class="th">Fórmula</p><p>Met.Ágil</p>
+                        <p class="th">Frecuencia</p><p>1/4</p>
+                        <p class="th">Cumplimiento</p><p>25%</p>
+                        <p class="th">Área</p><p>Diseño</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p class="th">Indicador</p><p>Colegios Privados</p>
+                        <p class="th">Descripción</p><p>Se busca llegar a los...</p>
+                        <p class="th">Categoría</p><p>Media</p>
+                        <p class="th">Fecha de Inicio</p><p>24/04/21</p>
+                        <p class="th">Fecha de Terminación</p><p>12/11/21</p>
+                        <p class="th">Fórmula</p><p>Met.Fibo</p>
+                        <p class="th">Frecuencia</p><p>1/4</p>
+                        <p class="th">Cumplimiento</p><p>80%</p>
+                        <p class="th">Área</p><p>Developers</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p class="th">Indicador</p><p>Ventas de electro......</p>
+                        <p class="th">Media</p><p>12/04/21</p>
+                        <p class="th">Fecha de Inicio</p><p>12/09/21</p>
+                        <p class="th">N/A</p><p>N/A</p>
+                        <p class="th">Frecuencia</p><p>1/3</p>
+                        <p class="th">Cumplimiento</p><p>32%</p>
+                        <p class="th">Área</p><p>Gerencia</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p class="th">Indicador</p><p>Impacto en los sec......</p>
+                        <p class="th">Alta</p><p>Alta</p>
+                        <p class="th">Fecha de Inicio</p><p>12/04/21</p>
+                        <p class="th">Fecha de Terminación</p><p>12/06/21</p>
+                        <p class="th">Fórmula</p><p>Met.Expo</p>
+                        <p class="th">Frecuencia</p><p>1/4</p>
+                        <p class="th">Cumplimiento</p><p>95%</p>
+                        <p class="th">Área</p><p>Marketing</p>
+                    </div>
+                    <img src="./sources/svg/Repeat Grid 2.svg" alt="">
+                </div>
+                <div class="contain-tr">
+                    <div class="tr">
+                        <p class="th">Indicador</p><p>Impacto en los sec......</p>
+                        <p class="th">Alta</p><p>Alta</p>
+                        <p class="th">Fecha de Inicio</p><p>15/02/21</p>
+                        <p class="th">Fecha de Terminación</p><p>09/11/21</p>
+                        <p class="th">Fórmula</p><p>Met.Expo</p>
+                        <p class="th">Frecuencia</p><p>1/2</p>
+                        <p class="th">Cumplimiento</p><p>75%</p>
+                        <p class="th">Área</p><p>Producción</p>
                     </div>
                     <img src="./sources/svg/Repeat Grid 2.svg" alt="">
                 </div>
