feat :sparkles: Completed help, report, and add modules

--- a/main.html
+++ b/main.html
@@ -178,10 +178,12 @@
     </div>
     <!-- Módulo Modal AÑADIR -->
     <div class="modal_general" id="modal">
-        <div class="modal_ayuda">
+        <div class="modal_añadir">
             <div class="modal_header">
-                <img src="./sources/svg/Group 3.svg" alt="icon">
-                <h3>Añadir</h3>
+                <div class="centered">
+                    <img src="./sources/svg/Group 3.svg" alt="icon">
+                    <h3>Añadir</h3>
+                </div>
                 <a href="#" class="cerrar_modal">&times;</a>
             </div>
             <label for="">Indicador</label>
@@ -202,23 +204,25 @@
             <input type="text">
             <a class="btn" href="#">Añadir Elemento </a>
         </div>
-        
+
     </div>
     </div>
     <!-- Módulo Modal REPORTAR -->
     <div class="modal_general" id="modal_reporte">
         <div class="modal_reportar">
             <div class="modal_header">
-                <img src="./sources/svg/Icon material-bug-report.svg" alt="icon">
-                <h3>Reportar</h3>
+                <div class="centered">
+                    <img src="./sources/svg/Icon material-bug-report.svg" alt="icon">
+                    <h3>Reportar</h3>
+                </div>
                 <a href="#" class="cerrar_modal">&times;</a>
             </div>
             <div class="modal_contain">
                 <h1>Descripcion de Reporte</h1>
-            <div class="name">
-                <label for="">Nombre completo:</label>
-                <input type="text">
-            </div>
+                <div class="name">
+                    <label for="">Nombre completo:</label>
+                    <input type="text">
+                </div>
                 <div class="correo">
                     <label for="">Correo electronico:</label>
                     <input type="email">
@@ -230,18 +234,45 @@
                 <div class="motivo">
                     <label for="">Motivo:</label>
                     <input class="motivo_cuadro" type="text">
-                   
                 </div>
-
             </div>
             <a class="btn" href="#">ENVIAR </a>
-
-
-
-
-
-
         </div>
+    </div>
+    <!-- Módulo Modal AYUDAR -->
+    <div class="modal_general" id="modal_ayuda">
+        <div class="modal_ayuda">
+            <div class="modal_header">
+                <div class="centered">
+                    <img src="./sources/svg/Icon ionic-ios-help-circle.svg" alt="icon">
+                    <h3>Ayuda</h3>
+                </div>
+                <a href="#" class="cerrar_modal">&times;</a>
+            </div>
+            <div class="modal_contain">
+                <h1>Contactar con un asesor:</h1>
+                <div class="name">
+                    <label for="">Nombre completo:</label>
+                    <input type="text">
+                </div>
+                <div class="correo">
+                    <label for="">Correo electronico:</label>
+                    <input type="email">
+                </div>
+                <div class="cel">
+                    <label for="">Telefono:</label>
+                    <input type="number">
+                </div>
+                <div class="motivo">
+                    <label for="">Descripcion del problema:</label>
+                    <input class="motivo_cuadro" type="text">
+                </div>
+            </div>
+            <a class="btn" href="#">ENVIAR </a>
+        </div>
+    </div>
+
+    </div>
 
     </div>
 
