--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <img class="hamburguesita" src="./sources/svg/Repeat Grid 2.svg" alt="">
         <div class="headerCenter">
             <div class="leftOpcs">
                 <a href="#modal">
