feat :sparkles: Developing modules

--- a/main.html
+++ b/main.html
@@ -407,6 +407,7 @@
                     <img src="./sources/svg/Icon ionic-ios-help-circle.svg" alt="icon">
                     <h3>Ayuda</h3>
                 </div>
+                <a href="#" class="cerrar_modal">&times;</a>
             </div>
                 <strong>Mensaje enviado!</strong>
         </div>
