feat :sparkles: Add modal delete confirmation

--- a/main.html
+++ b/main.html
@@ -406,7 +406,7 @@
                     </div>
                 </div>
             </div>
-            <a class="btn" href="#seguro_añadir">Añadir Elemento </a>
+            <a class="btn" href="#seguro_eliminar">Eliminar elementos</a>
         </div>
     </div>
 
@@ -492,6 +492,25 @@
             <div class="botones">
                     <a class="btn" href="#">Si, agregar</a>
                     <a class="btn" href="#modal">Regresar</a>
+            </div>
+        </div>
+    </div>
+
+    <!--Modulos de confirmacion ELIMINAR -->
+    <div class="modal_general" id="seguro_eliminar" >
+        <div class="modal_seguro">
+            <div class="modal_header">
+                <div class="centered">
+                    <img src="./sources/svg/Icon material-delete-forever.svg" alt="icon">
+                    <h3>Eliminar</h3>
+                </div>
+                <a href="#" class="cerrar_modal">&times;</a>
+
+            </div>
+                <strong>¿Esta seguro de eliminar los indicadores?</strong>
+            <div class="botones">
+                    <a class="btn" href="#">Si, eliminar</a>
+                    <a class="btn" href="#eliminar">Regresar</a>
             </div>
         </div>
     </div>
