feat :sparkles: ready modules

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img class="hamburguesita" src="./sources/svg/Repeat Grid 2.svg" alt="">
+        <a href="#indice"><img href="indice" class="hamburguesita" src="./sources/svg/Repeat Grid 2.svg" alt=""></a>
         <div class="headerCenter">
             <div class="leftOpcs">
                 <a href="#modal">
@@ -412,9 +412,26 @@
                 <strong>Mensaje enviado!</strong>
         </div>
     </div>
-
-
-
+    
+    <div class="modal_general" id="indice" >
+        <div class="modal_indice">
+            <div class="modal_header">
+                <nav class="indice">
+                    <div class="indice_header">
+                        <p>Menú</p>
+                        <a href="#" class="cerrar_modal">&times;</a>
+                    </div>
+                    
+                    <div class="indice_content">
+                        <a href="#modal" class="indice_item"><img src="./sources/svg/Group 3.svg" alt="">Añadir</a>
+                        <a href="" class="indice_item"><img src="./sources/svg/Icon open-reload.svg" alt="icon">Refrescar</a>
+                        <a href="#eliminar" class="indice_item"><img src="./sources/svg/Icon material-delete-forever.svg" alt="icon">Eliminar</a>
+                        <a href="#modal_reporte" class="indice_item"><img src="./sources/svg/Icon material-bug-report.svg" alt="icon">Reportar</a>
+                        <a href="#modal_ayuda" class="indice_item"><img src="./sources/svg/Icon ionic-ios-help-circle.svg" alt="icon">Ayuda</a>
+                    </div>
+                </nav>
+        </div>
+    </div>
 
 
 
